--- a/Thesis.tex
+++ b/Thesis.tex
@@ -135,7 +135,7 @@
 	name = {Davide Notaro, Emanuele Locati}, %\and Davide Notaro, % Author Name and Surname
 	course=Physics Engineering - Ingegneria Fisica, % Study Programme (in Italian)
 	ID  = {103558, 103577},  % Student ID number (numero di matricola)
-    coadvisor={Name Surname, Name Surname}, % Co-Supervisor name, remove this line if there is none
+    coadvisor=, % Co-Supervisor name, remove this line if there is none
 	advisor= Prof. Christoph Gerhard, % Supervisor name
 	academicyear={2023-2024},  % Academic Year
 } % These info will be put into your Title page 
